@@ -1,1 +1,2 @@
+# Control under which situations aliases are followed
 type Freeradius::Deref = Enum[ 'never', 'searching', 'finding', 'always' ]
